fix: navbar z-index

--- a/css/global.css
+++ b/css/global.css
@@ -57,6 +57,7 @@ body {
 
 nav {
   position: fixed;
+  z-index: 100;
   width: 100%;
   padding: 24px 128px;
 
